--- a/learning_log/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_log/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,15 +1,21 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h2><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></h2>
+{% endblock header %}
 
 {% block content %}
+    <h3>Edit entry:</h3>
 
-    <p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
-
-    <P>Edit entry:</P>
-
-    <form action="{% url 'learning_logs:edit_entry' entry.id %}" method="post">
+    <form action="{% url 'learning_logs:edit_entry' entry.id %}" method="post"
+            class="form">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="submit">save changes</button>
+        {% bootstrap_form form %}
+
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">save changes</button>
+        {% endbuttons %}
     </form>
 
 {% endblock content %}
